Extract pgw-common/pgw-domain modules; add DuckDB vs Pure-Arrow ingest comparison benchmark (Types A–J) (#9)
* Initial plan

* Add pgw-common and pgw-domain modules; add PipelineComparisonBenchmarkTest

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/7ce74bc6-3073-4262-9c05-3a1d0ca01484

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>

* Update README, TESTING.md, TEST_RESULTS.md, run_validation_tests.sh for 5-module structure and comparison benchmark

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/7ce74bc6-3073-4262-9c05-3a1d0ca01484

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>

* Fix pure-Arrow peak off-heap reporting; update TEST_RESULTS.md with real benchmark numbers A-G

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/7f33064c-6910-4d98-9998-8116d0226bcf

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>

* Fix CI: mvn install instead of package so pgw-common is in local repo; add pure-arrow fast tests

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/9d3a152a-db33-4776-aaeb-dd5245b47dca

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>

* feat: add Type H (10x200) and Type J (5x400) benchmark tests to pgw-ingestor and pgw-ingestor-pure-arrow

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/dfcc327f-a6e3-4f8c-b2fb-115568b620cc

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>

* feat: rename TYPE_K→TYPE_J (unitary 1x1), TYPE_J→TYPE_I (5x400) across all specs and benchmark tests

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/13f2203f-ee51-4727-9a52-8f72df8340e9

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>

* Fix ArrowIpc.load double-close (RefCnt bug); add H/I/J to PipelineComparisonBenchmarkTest; update TEST_RESULTS.md and README with actual A-J benchmark numbers (Java 25)"

Agent-Logs-Url: https://github.com/balchua/ja